--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "cheerio": "^1.1.2",
-    "next": "15.5.2",
+    "date-fns": "^4.1.0",
+    "next": "^15.5.2",
     "openai": "^5.16.0",
     "prisma": "^6.15.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rss-parser": "^3.13.0",
     "zod": "^3.25.76"
   },
