--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@prisma/client": "^6.15.0",
     "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
-    "next": "^15.5.2",
+    "next": "14.2.5",
     "openai": "^5.16.0",
     "prisma": "^6.15.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rss-parser": "^3.13.0",
     "zod": "^3.25.76"
   },
@@ -24,10 +24,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "14.2.5",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
