--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "scouted",
+  "name": "family-gift-list",
   "version": "0.1.0",
   "private": true,
+  "description": "Family Gift List web app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/<your-username>/<your-new-repo>.git"
+  },
+  "engines": {
+    "node": ">=18.17"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
